# checkmk

./: .bazelignore  .bazelrc  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  BUILD  Cargo.toml  MODULE.bazel  Makefile  OWNERS  community-requirements.txt  constraints.txt  eslint.config.mjs  host.Cargo.lock.bazel  module_layers.toml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  runtime-requirements.txt  site.Cargo.lock.bazel
.aspect/cli/: config.yaml
.claude/: settings.json
.claude/skills/: backport  crash_report  jira-create-ticket  jira-plan-ticket  jira-read-ticket  werk
.github/workflows/: pr.yaml
.werks/: 14253.md  16581.md  16912.md  16913.md  17866.md  18069.md  18485.md  18554.md  18581.md  18582.md  18583.md  18584.md  18706.md  18742.md  18743.md  18744.md  18895.md  18916.md  18955.md  18971.md  18975.md  18980.md  18981.md  18987.md  18989.md  19043.md  19044.md  19067.md  19089.md  19092.md  19093.md  19094.md  19095.md  19097.md  19098.md  19099.md  19101.md  19125.md  19127.md  19170.md  (+77 more)
agents/: check_mk_agent.linux
agents/plugins/: mk_podman.py
bazel/rules/: package_wheel.bzl
bazel/tools/: BUILD  aspects.bzl  license_header_checker.py  lint_license_header.bzl  package.json
buildscripts/scripts/: BUILD  Dockerfile  bazel_mypy.sh  build-announcement.groovy  build-build-images.groovy  build-cmk-deliverables.groovy  build-cmk-distro-package.groovy  build-cmk-image.groovy  build-cmk-source_tgz.groovy  build-linux-agent-updater.groovy  compile-all-werks.groovy  frontend-demo.groovy  frontend-ui-component-library.groovy  generic-package-job.groovy  (+33 more)
cmk/: BUILD  requirements.in
omd/: BUILD  README.md  strip_binaries  strip_binaries.py
scripts/: BUILD  OWNERS  decent-output  in_bazel.sh  lint.sh  run-doctests
tests/: BUILD  Makefile  OWNERS  conftest.py
(+1069 files in other folders)
