# Cargo.toml file used to lock the deps for bazel.
#
# See Also:
#    https://earthly.dev/blog/rust-monorepo/

[workspace]
members = [
  "packages/check-cert",
  "packages/check-http",
  "packages/cmk-agent-ctl",
  "packages/mk-oracle",
  "packages/mk-sql",
]
exclude = ["agents/wnx/extensions/robotmk_ext", "agents/wnx/test_files/tools/v"]
package.edition = "2021"
resolver = "2"

[profile.release.package.cmk-agent-ctl]
opt-level = "z" # Optimize for size.

[workspace.dependencies]
aes-gcm = "*"
anyhow = "1.0.94"
assert_cmd = "*"
assertor = "*"
async-trait = "0.1"
bincode = "1.3"
bytes = "*"
clap = { version = "4.5.22", features = ["derive"] }
derive_more = "1.0"
der-parser = "8.2.0"
encoding_rs = "*"
faccess = "0.2"
flate2 = "1.0"
flexi_logger = { version = "0.29", default-features = false }
futures = "0.3.31"
gethostname = "0.5.0"
hostname-validator = "1.1.1"
http = "1.2"
httpdate = "*"
ipnet = "2.10"
is_elevated = "0.1"
lazy_static = "1.5"
log = "0.4"
mail_slot = "0.1"
mime = "*"
nix = "0.29"
odbc-api = "10.0.0"
openssl = { version = "0.10.57" }
openssl-probe = "0.1.5"
os_info = "3.9"
predicates = "*"
rand = "0.8"
rayon = "1.11"
shellexpand = "3.1.2"
regex = "*"
reqwest = "0.12"
rpassword = "7.3"
rustls = { version = "0.23.19", default-features = false }
rustls-pemfile = "2.2"
scrypt = { version = "*", default-features = false }
serde = "1.0"
serde_json = "1.0"
serde_with = "3.11"
socket2 = "0.5"
tempfile = "*"
tiberius = "0.12.3"
time = "0.3.37"
tokio = "1.42.0"
tokio-rustls = { version = "0.26", default-features = false }
tokio-util = "0.7.13"
toml = "0.8"
tracing = "*"
tracing-subscriber = "*"
typed-builder = "0.18.0"
uuid = "1.11"
winapi = "0.3.9"
winreg = "0.52"
x509-parser = "0.15.1"
yaml-rust2 = "0.9.0"
